2009-09-06  Robby Stephenson  <robby@periapsis.org>

	* Updated the "Multiple ISBN" dialog box to validate ISBN and CueCat input.

2009-09-04  Robby Stephenson  <robby@periapsis.org>

	* Updated webcam support to use libv4l library.

2009-09-01  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.0pre2.

2009-08-23  Robby Stephenson  <robby@periapsis.org>

	* Added default fields for entry creation date and last-modified date.
	* Removed dependency on QCA2 library.

2009-08-09  Robby Stephenson  <robby@periapsis.org>

	* Updated Tellico user mailing list address.
	* Released Tellico 2.0pre1.

2009-08-01  Robby Stephenson  <robby@periapsis.org>

	* Updated HTML export to use country and language code both for sorting.
	* Updated Tellico home page URL.
	* Moved to document syntax 11 for removing Dependent and ReadOnly fields.
	* Added ID field to each new collection by default.

2009-03-13  Petri Damstén  <damu@iki.fi>

	* Added scanning support to image widget.
	* Added 'Open With...' -button to image widget

2009-03-10  Robby Stephenson  <robby@periapsis.org>

	* Added reading album artist from TPE2 tags in mp3 files.

2009-02-04  Robby Stephenson  <robby@periapsis.org>

	* Reverted change from 2007 that merged entries by combining all values in multiple-value fields.

2009-02-02  Robby Stephenson  <robby@periapsis.org>

	* Fixed the CueCat decoder to work for ISBN searches, as well as UPC.

2009-01-30  Robby Stephenson  <robby@periapsis.org>

	* Updated Deliciour Library 1 importer to handle movies and games.
	* Fixed Ubuntu bug#317822, don't mark collection modified when image is found in local data directory.
	* Fixed query bug with z39.50 ISBN search.

2008-12-07  Robby Stephenson  <robby@periapsis.org>

	* Updated it.po, thanks to Valerio Ricci.

2008-10-23  Robby Stephenson  <robby@periapsis.org>

	* Added date, time, and username as available params for the XSLT export.

2008-09-13  Robby Stephenson  <robby@periapsis.org>
